first show to client

--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3>
-                  CONECTAMOS ORIGEN Y MERCADO GLOBAL DE MANÍ CONFITERÍA DE
-                  EXCELENCIA
-                </h3>
-                <p>
-                  Somos una firma especializada en servicios de broker y trading
-                  internacional, focalizada en la comercialización de maní
-                  confitería de alta calidad y facilitando operaciones seguras y
-                  eficientes entre productores y compradores.
-                </p>
+                <div class="caption-bg">
+                  <h3>
+                    CONECTAMOS ORIGEN Y MERCADO GLOBAL DE MANÍ CONFITERÍA DE
+                    EXCELENCIA
+                  </h3>
+                  <p>
+                    Somos una firma especializada en servicios de broker y
+                    trading internacional, focalizada en la comercialización de
+                    maní confitería de alta calidad y facilitando operaciones
+                    seguras y eficientes entre productores y compradores.
+                  </p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
@@ -135,15 +137,17 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3>
-                  SOLUCIONES INTEGRALES DE TRADING INTERNACIONAL PARA EL SECTOR
-                  MANISERO
-                </h3>
-                <p>
-                  Nos diferenciamos por nuestra capacidad analítica de mercados,
-                  gestión integral de operaciones y un firme compromiso con la
-                  trazabilidad y calidad del producto.
-                </p>
+                <div class="caption-bg">
+                  <h3>
+                    SOLUCIONES INTEGRALES DE TRADING INTERNACIONAL PARA EL
+                    SECTOR MANISERO
+                  </h3>
+                  <p>
+                    Nos diferenciamos por nuestra capacidad analítica de
+                    mercados, gestión integral de operaciones y un firme
+                    compromiso con la trazabilidad y calidad del producto.
+                  </p>
+                </div>
               </div>
             </div>
             <div class="carousel-item">
@@ -153,10 +157,13 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h3>
-                  COMPROMETIDOS CON LA EFICIENCIA COMERCIAL Y LA CALIDAD GLOBAL
-                </h3>
-                <p>Presencia Internacional. Alcance global. Enfoque local.</p>
+                <div class="caption-bg">
+                  <h3>
+                    COMPROMETIDOS CON LA EFICIENCIA COMERCIAL Y LA CALIDAD
+                    GLOBAL
+                  </h3>
+                  <p>Presencia Internacional. Alcance global. Enfoque local.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -259,19 +266,27 @@
           <h4>SUPERVISIÓN DE CALIDAD Y CUMPLIMIENTO NORMATIVO</h4>
           <p>En origen y destino</p>
         </div>
-        <div>
-          HOLA Exportamos regularmente a: • Europa: Alemania, Países Bajos,
-          España, Italia, Francia • América del Norte y del Sur • Medio Oriente
-          y Asia: Emiratos Árabes Unidos, China, India, entre otros Nuestra red
-          de colaboradores y agentes locales nos permite adaptar las estrategias
-          de comercialización a cada mercado, garantizando cercanía operativa y
-          flexibilidad comercial.
-        </div>
+      </div>
+      <div class="paises">
+        <h5>Exportamos regularmente a:</h5>
+        <p>EUROPA: Alemania, Países Bajos, España, Italia, Francia</p>
+        <p>AMÉRICA DEL NORTE Y AMÉRICA DEL SUR</p>
+
+        <p>
+          ASIA Y MEDIO ORIENTE: Emiratos Árabes Unidos, China, India, entre
+          otros
+        </p>
+
+        <p>
+          Nuestra red de colaboradores y agentes locales nos permite adaptar las
+          estrategias de comercialización a cada mercado, garantizando cercanía
+          operativa y flexibilidad comercial.
+        </p>
       </div>
     </section>
     <section class="container-fluid p-0" id="contacto">
       <h2 class="titulos">SOBRE NOSOTROS</h2>
-      <p class="description">
+      <p id="italic">
         Con base operativa en Argentina y representación activa en mercados
         clave, somos un equipo multidisciplinario con amplia experiencia en el
         comercio exterior agroindustrial. Actuamos como nexo estratégico entre
@@ -281,40 +296,61 @@
       </p>
       <div class="nosotros">
         <div class="left-diagonal">
-          Por qué elegirnos • Experiencia probada en el sector agroexportador •
-          Solidez operativa y cumplimiento contractual • Gestión logística
-          eficiente y documentación internacional • Relaciones a largo plazo con
-          productores e importadores • Enfoque proactivo en calidad,
-          trazabilidad y sostenibilidad
+          <h4>Por qué elegirnos</h4>
+          <ul>
+            <li>
+              <i class="bi bi-shield-fill-check"></i> Experiencia probada en el
+              sector agroexportador
+            </li>
+            <li>
+              <i class="bi bi-shield-fill-check"></i> Solidez operativa y
+              cumplimiento contractual
+            </li>
+            <li>
+              <i class="bi bi-shield-fill-check"></i> Gestión logística
+              eficiente y documentación internacional
+            </li>
+            <li>
+              <i class="bi bi-shield-fill-check"></i> Relaciones a largo plazo
+              con productores e importadores
+            </li>
+            <li>
+              <i class="bi bi-shield-fill-check"></i> Enfoque proactivo en
+              calidad, trazabilidad y sostenibilidad
+            </li>
+          </ul>
         </div>
         <div class="right-diagonal">
-          Contacto ¿Interesado en trabajar con nosotros? Póngase en contacto con
-          nuestro equipo comercial y obtenga una cotización personalizada o
-          información adicional sobre nuestras operaciones. Email:
-          contacto@tuempresa.com Teléfono: +54 9 351 0000000
+          <h4>¿Interesado en trabajar con nosotros?</h4>
+          <p>
+            Póngase en contacto con nuestro equipo comercial y obtenga una
+            cotización personalizada o información adicional sobre nuestras
+            operaciones.
+          </p>
+          <p>
+            <i class="bi bi-envelope-fill"></i>
+            <a href="mailto:conotrader@gmail.com">conotrader@gmail.com</a>
+          </p>
+          <p>
+            <i class="bi bi-telephone-fill"></i>
+            <a href="mailto:conotrader@gmail.com">+54 9 351 0000000</a>
+          </p>
+          <p>
+            <i class="bi bi-whatsapp"></i>
+            <a href="mailto:conotrader@gmail.com">+54 9 351 0000000</a>
+          </p>
         </div>
       </div>
     </section>
     <footer>
-      <div class="left-content">
-        <h3>CONOTRADER LLC</h3>
+      <div>
+        <h5>CONOTRADER LLC</h5>
         <hr />
-        <p>Miami, FL.</p>
       </div>
 
-      <div class="right-content">
-        <div class="contact-info">
-          <h4>Información de contacto</h4>
-          Oficinas: Córdoba, Argentina | Representación en Europa y América
-          <p>
-            <i class="bi bi-envelope-fill"></i>
-            <a href="mailto:conotrader@gmail.com">conotrader@gmail.com</a>
-          </p>
-          <p>
-            <i class="bi bi-envelope-fill"></i>
-            <a href="mailto:conotrader@gmail.com">conotrader@gmail.com</a>
-          </p>
-        </div>
+      <div>
+        <p>Oficinas: Córdoba, Argentina | Representación en Europa y América</p>
+        <hr />
       </div>
     </footer>
   </body>
